:sparkles: Magic scanner

--- a/index.html
+++ b/index.html
@@ -107,9 +107,41 @@
           <div class="projects__grid">
             <div class="projects__item">
               <picture>
+                <img
+                  src="/images/previews/magic-scanner.png"
+                  alt=""
+                  srcset=""
+                />
+              </picture>
+              <h3>🧙‍♂️ Magic Scanner</h3>
+              <p class="projects__tags">
+                <span>React</span>
+                <span>Tailwind</span>
+                <span>Vercel</span>
+                <span>Go</span>
+                <span>PWA</span>
+                <span>OCR - Google</span>
+              </p>
+              <div class="projects__links">
+                <a
+                  href="https://magic-scanner.vercel.app/"
+                  target="_blank"
+                  class="underline"
+                  >View project</a
+                >
+                <a
+                  href="https://github.com/Michelprogram/magic-scanner"
+                  target="_blank"
+                  class="underline"
+                  >View code</a
+                >
+              </div>
+            </div>
+            <div class="projects__item">
+              <picture>
                 <img src="/images/previews/cut.png" alt="" srcset="" />
               </picture>
-              <h3>Clean your twitter</h3>
+              <h3>🍃 Clean your twitter</h3>
               <p class="projects__tags">
                 <span>Nuxt JS</span>
                 <span>Golang</span>
@@ -134,7 +166,7 @@
               <picture>
                 <img src="/images/previews/planets.png" alt="" srcset="" />
               </picture>
-              <h3>Planet store</h3>
+              <h3>🪐 Planet store</h3>
               <p class="projects__tags">
                 <span>React</span>
                 <span>SCSS</span>
@@ -159,7 +191,7 @@
               <picture>
                 <img src="/images/previews/twitter-bot.png" alt="" srcset="" />
               </picture>
-              <h3>Twitter bot username</h3>
+              <h3>🤖 Twitter bot username</h3>
               <p class="projects__tags">
                 <span>Golang</span>
                 <span>Twitter API</span>
@@ -183,7 +215,7 @@
               <picture>
                 <img src="/images/previews/chess.png" alt="" srcset="" />
               </picture>
-              <h3>Chess game CLI</h3>
+              <h3>♟️ Chess game CLI</h3>
               <p class="projects__tags">
                 <span>Java</span>
                 <span>Design pattern</span>
@@ -208,7 +240,7 @@
               <picture>
                 <img src="/images/previews/mac.png" alt="" srcset="" />
               </picture>
-              <h3>Apple animation</h3>
+              <h3>🍏 Apple animation</h3>
               <p class="projects__tags">
                 <span>Vue</span>
                 <span>SCSS</span>
@@ -234,7 +266,7 @@
               <picture>
                 <img src="/images/previews/data-pattern.svg" alt="" srcset="" />
               </picture>
-              <h3>Data structures & Pattern</h3>
+              <h3>🗂️ Data structures & Pattern</h3>
               <p class="projects__tags">
                 <span>Algorithm</span>
                 <span>Go</span>
@@ -258,7 +290,7 @@
               <picture>
                 <img src="/images/previews/speed.png" alt="" srcset="" />
               </picture>
-              <h3>Too much speed</h3>
+              <h3>🏎️ Too much speed</h3>
               <p class="projects__tags">
                 <span>Docker</span>
                 <span>Redis</span>
